--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build PDF
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_path: src
